Fixed dialog viewer deprecated URL constructor